Enum + Bootsrap on edit (pages)

--- a/app/Resources/views/taches/edit.html.twig
+++ b/app/Resources/views/taches/edit.html.twig
@@ -1,8 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Tach edit</h1>
-    <div class="form-group">
+    <h1>Modification tâche</h1>
+    <div class="form-group">{% form_theme edit_form 'bootstrap_3_layout.html.twig' %}
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
         <input type="submit" value="Modifier" />
