--- a/app/Resources/views/technicien/edit.html.twig
+++ b/app/Resources/views/technicien/edit.html.twig
@@ -2,7 +2,8 @@
 
 {% block body %}
     <h1>Modification technicien</h1>
-    <div class="form-group">
+
+    <div class="form-group">{% form_theme edit_form 'bootstrap_3_layout.html.twig' %}
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
         <input type="submit" value="Modifier" />
